0.15.0 (trunk):
* Name.domain_name has been renamed to Name.t and is now abstract
* Name.domain_name_to_string has been renamed to Name.to_string
* Name.string_to_domain_name has been renamed to Name.of_string
* Name.for_reverse now accepts a V4/V6 Ipaddr.t and we require >= ipaddr.2.6.0

0.14.0 (2015-01-29):
* Renamed `Packet.QM` to `Packet.Q_Normal` and `QU` to `Q_mDNS_Unicast` for
  clarity and added more detailed doc comments. Added constructor function
  `Packet.make_question` for convenience. (#41)
* Support `io-page` 1.3.0+ interface. (#40)

0.13.0 (2015-01-26):
* Add support for multicast DNS (RFC6762) in the trie. (#35 from Luke Dunstan)
  * mDNS doesn't use SOA nor delegation (RFC 6762 section 12), so some minor changes
    to Trie are required to handle this.
  * mDNS doesn't echo the questions in the response (RFC 6762 section 6), except
    in legacy mode, so a `bool` argument was added to `Query.response_of_answer`.
  * `Query.answer` still exists but now `Query.answer_multiple` is also available
    for answering multiple questions in one query to produce a single answer 
    (RFC 6762 section 5.3). One caveat is that responses may exceed the maximum
    message length, but that is not really specific to mDNS. Also, in theory multiple
    questions might require multiple separate response messages in unusual cases,
    but that is complicated and the library does not deal with that yet.
  * `Query.answer_multiple` takes an optional function to allow the caller to control
    the `cache-flush` bit. This bit is only set for records that have been "confirmed
    as unique". Using a callback requires minimal changes here but puts the burden of
    maintaining uniqueness state elsewhere.
  * `Query.answer_multiple` takes an optional function to filter the answer, in order
    to support "known answer suppression" (RFC 6762 section 7.1). Again, using a callback
    requires minimal change to the core, but later on the mDNS-specific known answer