@@ -45,7 +45,7 @@ let get_target_dnsnode owner db =
       try
       	Hashtbl.find db.names key
       with Not_found ->
-	let n = { owner = Name.hashcons_domainname owner;
+	let n = { owner = Name.hashcons owner;
 		  rrsets = []; }
 	in Hashtbl.add db.names key n ;
 	n
@@ -57,7 +57,7 @@ let get_owner_dnsnode owner db =
     try
       match Hashtbl.find tbl key with
 	d -> Hashtbl.remove tbl key; d
-    with Not_found -> { owner = Name.hashcons_domainname owner;
+    with Not_found -> { owner = Name.hashcons owner;
 			rrsets = []; }
   in
   let key = Name.canon2key owner in
@@ -164,7 +164,7 @@ let add_rrset rrset owner db =
   if not (old_ttl = rrset.ttl) then raise TTLMismatch
 
 let add_generic_rr tcode str ttl owner db =
-  let s = Name.hashcons_charstring str in
+  let s = Name.hashcons_string str in
   add_rrset { ttl; rdata = Unknown (tcode, [ s ]) } owner db
 
 let add_a_rr ip ttl owner db =
@@ -208,7 +208,7 @@ let add_mr_rr target ttl owner db =
   add_rrset { ttl; rdata = MR [ targetnode ] } owner db
 
 let add_wks_rr addr prot bitmap ttl owner db =
-  let b = Name.hashcons_charstring bitmap in
+  let b = Name.hashcons_string bitmap in
   add_rrset { ttl; rdata = WKS [ (addr, prot, b) ] } owner db
 
 let add_ptr_rr target ttl owner db =
@@ -216,8 +216,8 @@ let add_ptr_rr target ttl owner db =
   add_rrset { ttl; rdata = PTR [ targetnode ] } owner db
 
 let add_hinfo_rr cpu os ttl owner db =
-  let c = Name.hashcons_charstring cpu in
-  let o = Name.hashcons_charstring os in
+  let c = Name.hashcons_string cpu in
+  let o = Name.hashcons_string os in
   add_rrset { ttl; rdata = HINFO [ (c, o) ] } owner db
 
 let add_minfo_rr rmailbx emailbx ttl owner db =
@@ -231,7 +231,7 @@ let add_mx_rr pri target ttl owner db =
   add_rrset { ttl; rdata = MX [ (pri, targetnode) ] } owner db
 
 let add_txt_rr strl ttl owner db =
-  let sl = List.map Name.hashcons_charstring strl in
+  let sl = List.map Name.hashcons_string strl in
   add_rrset { ttl; rdata = TXT [ sl ] } owner db
 
 let add_rp_rr mbox txt ttl owner db =
@@ -245,14 +245,14 @@ let add_afsdb_rr subtype target ttl owner db =
   add_rrset { ttl; rdata = AFSDB [ (st, targetnode) ] } owner db
 
 let add_x25_rr addr ttl owner db =
-  let a = Name.hashcons_charstring addr in
+  let a = Name.hashcons_string addr in
   add_rrset { ttl; rdata = X25 [ a ] } owner db
 
 let add_isdn_rr addr sa ttl owner db =
-  let a = Name.hashcons_charstring addr in
+  let a = Name.hashcons_string addr in
   let s = match sa with
     | None -> None
-    | Some x -> Some (Name.hashcons_charstring x) in
+    | Some x -> Some (Name.hashcons_string x) in
   add_rrset { ttl; rdata = ISDN [ (a, s) ] } owner db
 
 let add_rt_rr pref target ttl owner db =
@@ -276,7 +276,7 @@ let add_dnskey_rr flags typ key ttl owner db =
   let flags = flags in
   let typ = typ in
   let tmp = B64.decode key in
-  let dnskey = Name.hashcons_charstring tmp in
+  let dnskey = Name.hashcons_string tmp in
   add_rrset { ttl; rdata = DNSKEY [ (flags, typ, dnskey) ] } owner db
 
 (** valeur entière d'un chiffre hexa *)
@@ -330,7 +330,7 @@ let add_ds_rr tag alg digest key ttl owner db =
       | None -> failwith (sprintf "add_ds_rr : invalid hashing alg %d" digest)
   in
   let tmp = string_of_hex key in
-  let ds = Name.hashcons_charstring tmp in
+  let ds = Name.hashcons_string tmp in
   add_rrset { ttl; rdata = DS [ (tag, alg, digest, ds) ] } owner db
 
 let add_rrsig_rr typ alg lbl orig_ttl exp_ts inc_ts tag name sign ttl owner db =
